# backend/src/main/java/com/aksi/domain/pricing/PriceModifierEntity.java
@@ -2,8 +2,8 @@ package com.aksi.domain.pricing;
 
 import java.util.List;
 
-import com.aksi.api.pricing.dto.ModifierType;
-import com.aksi.api.pricing.dto.OperationType;
+import com.aksi.api.pricing.dto.PricingModifierType;
+import com.aksi.api.pricing.dto.PricingOperationType;
 import com.aksi.domain.common.BaseEntity;
 
 import jakarta.persistence.CollectionTable;
@@ -49,11 +49,11 @@ public class PriceModifierEntity extends BaseEntity {
 
   @Column(name = "modifier_type", nullable = false, length = 20)
   @Enumerated(EnumType.STRING)
-  private ModifierType type;
+  private PricingModifierType type;
 
   @Column(name = "operation_type", nullable = false, length = 20)
   @Enumerated(EnumType.STRING)
-  private OperationType operation = OperationType.ADD;
+  private PricingOperationType operation = PricingOperationType.ADD;
 
   @Column(name = "modifier_value", nullable = false)
   private Integer value;
